example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-2.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"_.\", None)"
---
Ok(
    (
        Language {
            v: None,
            _s: (),
            t: Spanned {
                value: None,
                span: (
                    1,
                    1,
                ),
            },
            _d: Some(
                (),
            ),
        },
        EditTree,
    ),
)
