example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-3.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"1_\", None)"
---
Ok(
    (
        Language {
            v: Some(
                1,
            ),
            _s: (),
            t: Spanned {
                value: None,
                span: (
                    2,
                    2,
                ),
            },
            _d: None,
        },
        EditTree,
    ),
)
