example/src/snapshots/rust_sitter_example__optionals__tests__optional_grammar-8.snap
---
source: example/src/optionals.rs
expression: "grammar::parse(\"_2.\", None)"
---
Ok(
    (
        Language {
            v: None,
            _s: (),
            t: Spanned {
                value: Some(
                    Number {
                        v: 2,
                    },
                ),
                span: (
                    1,
                    2,
                ),
            },
            _d: Some(
                (),
            ),
        },
        EditTree,
    ),
)
